server/src/layerfile-service/antlr/LayerfileParser.ts
// Generated from LayerfileParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { LayerfileParserListener } from "./LayerfileParserListener";

export class LayerfileParser extends Parser {
	public static readonly WS = 1;
	public static readonly COMMENT = 2;
	public static readonly BUTTON = 3;
	public static readonly CACHE = 4;
	public static readonly CHECKPOINT = 5;
	public static readonly CLONE = 6;
	public static readonly COPY = 7;
	public static readonly ENV = 8;
	public static readonly BUILD_ENV = 9;
	public static readonly FROM = 10;
	public static readonly MEMORY = 11;
	public static readonly RUN = 12;
	public static readonly RUN_BACKGROUND = 13;
	public static readonly RUN_REPEATABLE = 14;
	public static readonly SECRET_ENV = 15;
	public static readonly SETUP_FILE = 16;
	public static readonly SKIP_REMAINING_IF = 17;
	public static readonly SPLIT = 18;
	public static readonly EXPOSE_WEBSITE = 19;
	public static readonly USER = 20;
	public static readonly WAIT = 21;
	public static readonly WORKDIR = 22;
	public static readonly OTHER = 23;
	public static readonly BUILD_ENV_VALUE = 24;
	public static readonly BUILD_ENV_WS = 25;
	public static readonly BUILD_ENV_EOL = 26;
	public static readonly BUTTON_DATA = 27;
	public static readonly CHECKPOINT_VALUE = 28;
	public static readonly CHECKPOINT_WS = 29;
	public static readonly CHECKPOINT_EOL = 30;
	public static readonly CLONE_VALUE = 31;
	public static readonly CLONE_WS = 32;
	public static readonly CLONE_EOL = 33;
	public static readonly ENV_VALUE = 34;
	public static readonly ENV_WS = 35;
	public static readonly ENV_EOL = 36;
	public static readonly WEBSITE_EOL = 37;
	public static readonly WEBSITE_ITEM = 38;
	public static readonly WEBSITE_WS = 39;
	public static readonly FROM_DATA = 40;
	public static readonly MEMORY_AMOUNT = 41;
	public static readonly RUN_DATA = 42;
	public static readonly RUN_NEXT = 43;
	public static readonly SECRET_ENV_VALUE = 44;
	public static readonly SECRET_ENV_WS = 45;
	public static readonly SECRET_ENV_EOL = 46;
	public static readonly SKIP_REMAINING_IF_VALUE = 47;
	public static readonly SKIP_REMAINING_IF_AND = 48;
	public static readonly SKIP_REMAINING_IF_WS = 49;
	public static readonly SKIP_REMAINING_IF_EOL = 50;
	public static readonly SPLIT_NUMBER = 51;
	public static readonly SPLIT_WS = 52;
	public static readonly USER_NAME = 53;
	public static readonly END_OF_FILES = 54;
	public static readonly FILE = 55;
	public static readonly FILE_WS = 56;
	public static readonly RULE_layerfile = 0;
	public static readonly RULE_cmd = 1;
	public static readonly RULE_button = 2;
	public static readonly RULE_cache = 3;
	public static readonly RULE_checkpoint = 4;
	public static readonly RULE_clone = 5;
	public static readonly RULE_copy = 6;
	public static readonly RULE_env = 7;
	public static readonly RULE_build_env = 8;
	public static readonly RULE_from = 9;
	public static readonly RULE_memory = 10;
	public static readonly RULE_run = 11;
	public static readonly RULE_run_background = 12;
	public static readonly RULE_run_repeatable = 13;
	public static readonly RULE_secret_env = 14;
	public static readonly RULE_setup_file = 15;
	public static readonly RULE_skip_remain_if = 16;
	public static readonly RULE_split = 17;
	public static readonly RULE_expose_website = 18;
	public static readonly RULE_user = 19;
	public static readonly RULE_wait = 20;
	public static readonly RULE_workdir = 21;
	public static readonly RULE_other = 22;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"layerfile", "cmd", "button", "cache", "checkpoint", "clone", "copy", 
		"env", "build_env", "from", "memory", "run", "run_background", "run_repeatable", 
		"secret_env", "setup_file", "skip_remain_if", "split", "expose_website", 
		"user", "wait", "workdir", "other",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "'BUTTON'", "'CACHE'", "'CHECKPOINT'", 
		"'CLONE '", "'COPY'", "'ENV'", "'BUILD ENV '", "'FROM '", "'MEMORY '", 
		"'RUN '", "'RUN BACKGROUND '", "'RUN REPEATABLE '", "'SECRET ENV '", "'SETUP FILE '", 
		"'SKIP REMAINING IF '", "'SPLIT '", "'EXPOSE WEBSITE '", "'USER '", "'WAIT '", 
		"'WORKDIR '", undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "'AND'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "WS", "COMMENT", "BUTTON", "CACHE", "CHECKPOINT", "CLONE", 
		"COPY", "ENV", "BUILD_ENV", "FROM", "MEMORY", "RUN", "RUN_BACKGROUND", 
		"RUN_REPEATABLE", "SECRET_ENV", "SETUP_FILE", "SKIP_REMAINING_IF", "SPLIT", 
		"EXPOSE_WEBSITE", "USER", "WAIT", "WORKDIR", "OTHER", "BUILD_ENV_VALUE", 
		"BUILD_ENV_WS", "BUILD_ENV_EOL", "BUTTON_DATA", "CHECKPOINT_VALUE", "CHECKPOINT_WS", 
		"CHECKPOINT_EOL", "CLONE_VALUE", "CLONE_WS", "CLONE_EOL", "ENV_VALUE", 
		"ENV_WS", "ENV_EOL", "WEBSITE_EOL", "WEBSITE_ITEM", "WEBSITE_WS", "FROM_DATA", 
		"MEMORY_AMOUNT", "RUN_DATA", "RUN_NEXT", "SECRET_ENV_VALUE", "SECRET_ENV_WS", 
		"SECRET_ENV_EOL", "SKIP_REMAINING_IF_VALUE", "SKIP_REMAINING_IF_AND", 
		"SKIP_REMAINING_IF_WS", "SKIP_REMAINING_IF_EOL", "SPLIT_NUMBER", "SPLIT_WS", 
		"USER_NAME", "END_OF_FILES", "FILE", "FILE_WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(LayerfileParser._LITERAL_NAMES, LayerfileParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return LayerfileParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "LayerfileParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return LayerfileParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return LayerfileParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(LayerfileParser._ATN, this);
	}
	// @RuleVersion(0)
	public layerfile(): LayerfileContext {
		let _localctx: LayerfileContext = new LayerfileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, LayerfileParser.RULE_layerfile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LayerfileParser.COMMENT) | (1 << LayerfileParser.BUTTON) | (1 << LayerfileParser.CACHE) | (1 << LayerfileParser.CHECKPOINT) | (1 << LayerfileParser.CLONE) | (1 << LayerfileParser.COPY) | (1 << LayerfileParser.ENV) | (1 << LayerfileParser.BUILD_ENV) | (1 << LayerfileParser.FROM) | (1 << LayerfileParser.MEMORY) | (1 << LayerfileParser.RUN) | (1 << LayerfileParser.RUN_BACKGROUND) | (1 << LayerfileParser.RUN_REPEATABLE) | (1 << LayerfileParser.SECRET_ENV) | (1 << LayerfileParser.SETUP_FILE) | (1 << LayerfileParser.SKIP_REMAINING_IF) | (1 << LayerfileParser.SPLIT) | (1 << LayerfileParser.EXPOSE_WEBSITE) | (1 << LayerfileParser.USER) | (1 << LayerfileParser.WAIT) | (1 << LayerfileParser.WORKDIR))) !== 0)) {
				{
				{
				this.state = 46;
				this.cmd();
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 52;
			this.match(LayerfileParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cmd(): CmdContext {
		let _localctx: CmdContext = new CmdContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, LayerfileParser.RULE_cmd);
		try {
			this.state = 76;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 54;
				this.button();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 55;
				this.cache();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 56;
				this.checkpoint();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 57;
				this.from();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 58;
				this.clone();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 59;
				this.copy();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 60;
				this.env();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 61;
				this.build_env();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 62;
				this.from();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 63;
				this.memory();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 64;
				this.run();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 65;
				this.run_background();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 66;
				this.run_repeatable();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 67;
				this.secret_env();
				}
				break;

			case 15:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 68;
				this.setup_file();
				}
				break;

			case 16:
				this.enterOuterAlt(_localctx, 16);
				{
				this.state = 69;
				this.skip_remain_if();
				}
				break;

			case 17:
				this.enterOuterAlt(_localctx, 17);
				{
				this.state = 70;
				this.split();
				}
				break;

			case 18:
				this.enterOuterAlt(_localctx, 18);
				{
				this.state = 71;
				this.expose_website();
				}
				break;

			case 19:
				this.enterOuterAlt(_localctx, 19);
				{
				this.state = 72;
				this.user();
				}
				break;

			case 20:
				this.enterOuterAlt(_localctx, 20);
				{
				this.state = 73;
				this.wait();
				}
				break;

			case 21:
				this.enterOuterAlt(_localctx, 21);
				{
				this.state = 74;
				this.workdir();
				}
				break;

			case 22:
				this.enterOuterAlt(_localctx, 22);
				{
				this.state = 75;
				this.match(LayerfileParser.COMMENT);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public button(): ButtonContext {
		let _localctx: ButtonContext = new ButtonContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, LayerfileParser.RULE_button);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(LayerfileParser.BUTTON);
			this.state = 80;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.BUTTON_DATA) {
				{
				this.state = 79;
				this.match(LayerfileParser.BUTTON_DATA);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public cache(): CacheContext {
		let _localctx: CacheContext = new CacheContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, LayerfileParser.RULE_cache);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			this.match(LayerfileParser.CACHE);
			this.state = 86;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.FILE) {
				{
				{
				this.state = 83;
				this.match(LayerfileParser.FILE);
				}
				}
				this.state = 88;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 89;
			this.match(LayerfileParser.END_OF_FILES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public checkpoint(): CheckpointContext {
		let _localctx: CheckpointContext = new CheckpointContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, LayerfileParser.RULE_checkpoint);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 91;
			this.match(LayerfileParser.CHECKPOINT);
			this.state = 95;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.CHECKPOINT_VALUE) {
				{
				{
				this.state = 92;
				this.match(LayerfileParser.CHECKPOINT_VALUE);
				}
				}
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 98;
			this.match(LayerfileParser.CHECKPOINT_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public clone(): CloneContext {
		let _localctx: CloneContext = new CloneContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, LayerfileParser.RULE_clone);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.match(LayerfileParser.CLONE);
			this.state = 104;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.CLONE_VALUE) {
				{
				{
				this.state = 101;
				this.match(LayerfileParser.CLONE_VALUE);
				}
				}
				this.state = 106;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 107;
			this.match(LayerfileParser.CLONE_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public copy(): CopyContext {
		let _localctx: CopyContext = new CopyContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, LayerfileParser.RULE_copy);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.match(LayerfileParser.COPY);
			this.state = 110;
			this.match(LayerfileParser.FILE);
			this.state = 111;
			this.match(LayerfileParser.FILE);
			this.state = 112;
			this.match(LayerfileParser.END_OF_FILES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public env(): EnvContext {
		let _localctx: EnvContext = new EnvContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, LayerfileParser.RULE_env);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this.match(LayerfileParser.ENV);
			this.state = 118;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.ENV_VALUE) {
				{
				{
				this.state = 115;
				this.match(LayerfileParser.ENV_VALUE);
				}
				}
				this.state = 120;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 121;
			this.match(LayerfileParser.ENV_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public build_env(): Build_envContext {
		let _localctx: Build_envContext = new Build_envContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, LayerfileParser.RULE_build_env);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(LayerfileParser.BUILD_ENV);
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.BUILD_ENV_VALUE) {
				{
				{
				this.state = 124;
				this.match(LayerfileParser.BUILD_ENV_VALUE);
				}
				}
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 130;
			this.match(LayerfileParser.BUILD_ENV_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public from(): FromContext {
		let _localctx: FromContext = new FromContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, LayerfileParser.RULE_from);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this.match(LayerfileParser.FROM);
			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.FROM_DATA) {
				{
				this.state = 133;
				this.match(LayerfileParser.FROM_DATA);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public memory(): MemoryContext {
		let _localctx: MemoryContext = new MemoryContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, LayerfileParser.RULE_memory);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this.match(LayerfileParser.MEMORY);
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.MEMORY_AMOUNT) {
				{
				this.state = 137;
				this.match(LayerfileParser.MEMORY_AMOUNT);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public run(): RunContext {
		let _localctx: RunContext = new RunContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, LayerfileParser.RULE_run);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 140;
			this.match(LayerfileParser.RUN);
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.RUN_DATA) {
				{
				this.state = 141;
				this.match(LayerfileParser.RUN_DATA);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public run_background(): Run_backgroundContext {
		let _localctx: Run_backgroundContext = new Run_backgroundContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, LayerfileParser.RULE_run_background);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.match(LayerfileParser.RUN_BACKGROUND);
			this.state = 146;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.RUN_DATA) {
				{
				this.state = 145;
				this.match(LayerfileParser.RUN_DATA);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public run_repeatable(): Run_repeatableContext {
		let _localctx: Run_repeatableContext = new Run_repeatableContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, LayerfileParser.RULE_run_repeatable);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.match(LayerfileParser.RUN_REPEATABLE);
			this.state = 150;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.RUN_DATA) {
				{
				this.state = 149;
				this.match(LayerfileParser.RUN_DATA);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public secret_env(): Secret_envContext {
		let _localctx: Secret_envContext = new Secret_envContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, LayerfileParser.RULE_secret_env);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 152;
			this.match(LayerfileParser.SECRET_ENV);
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.SECRET_ENV_VALUE) {
				{
				{
				this.state = 153;
				this.match(LayerfileParser.SECRET_ENV_VALUE);
				}
				}
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 159;
			this.match(LayerfileParser.SECRET_ENV_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public setup_file(): Setup_fileContext {
		let _localctx: Setup_fileContext = new Setup_fileContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, LayerfileParser.RULE_setup_file);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 161;
			this.match(LayerfileParser.SETUP_FILE);
			this.state = 165;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.FILE) {
				{
				{
				this.state = 162;
				this.match(LayerfileParser.FILE);
				}
				}
				this.state = 167;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 168;
			this.match(LayerfileParser.END_OF_FILES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public skip_remain_if(): Skip_remain_ifContext {
		let _localctx: Skip_remain_ifContext = new Skip_remain_ifContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, LayerfileParser.RULE_skip_remain_if);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 170;
			this.match(LayerfileParser.SKIP_REMAINING_IF);
			this.state = 171;
			this.match(LayerfileParser.SKIP_REMAINING_IF_VALUE);
			this.state = 174;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.SKIP_REMAINING_IF_AND) {
				{
				this.state = 172;
				this.match(LayerfileParser.SKIP_REMAINING_IF_AND);
				this.state = 173;
				this.match(LayerfileParser.SKIP_REMAINING_IF_VALUE);
				}
			}

			this.state = 176;
			this.match(LayerfileParser.SKIP_REMAINING_IF_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public split(): SplitContext {
		let _localctx: SplitContext = new SplitContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, LayerfileParser.RULE_split);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 178;
			this.match(LayerfileParser.SPLIT);
			this.state = 180;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.SPLIT_NUMBER) {
				{
				this.state = 179;
				this.match(LayerfileParser.SPLIT_NUMBER);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expose_website(): Expose_websiteContext {
		let _localctx: Expose_websiteContext = new Expose_websiteContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, LayerfileParser.RULE_expose_website);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 182;
			this.match(LayerfileParser.EXPOSE_WEBSITE);
			this.state = 186;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LayerfileParser.WEBSITE_ITEM) {
				{
				{
				this.state = 183;
				this.match(LayerfileParser.WEBSITE_ITEM);
				}
				}
				this.state = 188;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 189;
			this.match(LayerfileParser.WEBSITE_EOL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public user(): UserContext {
		let _localctx: UserContext = new UserContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, LayerfileParser.RULE_user);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 191;
			this.match(LayerfileParser.USER);
			this.state = 193;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LayerfileParser.USER_NAME) {
				{
				this.state = 192;
				this.match(LayerfileParser.USER_NAME);
				}
			}
